# linuxCamJpeg

./: CMakeLists.txt  README.md  linuxCamJpeg.kdev4  main.cpp
